--- a/app/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/app/app/src/main/res/drawable/ic_launcher_background.xml
@@ -7,6 +7,6 @@
       android:translateY="1.9316239">
     <path
         android:pathData="M8,0L109,0A8,8 0,0 1,117 8L117,105A8,8 0,0 1,109 113L8,113A8,8 0,0 1,0 105L0,8A8,8 0,0 1,8 0z"
-        android:fillColor="#FFFBFF"/>
+        android:fillColor="#FAFAFA"/>
   </group>
 </vector>
